--- a/playground/templates/playground/sign_in_failed.html
+++ b/playground/templates/playground/sign_in_failed.html
@@ -1,9 +1,9 @@
 {% extends 'playground/sign_in.html' %}
 
 
-{% block error %}
+{% block invalid_params %}
 <a class="error_message">Error in password or username</a>
-{% endblock error %}
+{% endblock invalid_params %}
     
 
 
