--- a/playground/templates/playground/sign_up.html
+++ b/playground/templates/playground/sign_up.html
@@ -100,8 +100,8 @@
         <form action="{% url 'sign_up' %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
@@ -115,7 +115,12 @@
                 <label for="confirm_password">Confirm Password</label>
                 <input type="password" id="confirm_password" name="confirm_password" required>
             </div>
-            <button type="submit" class="signup-button">Sign Up</button>
+            <form method="post" action="{% url 'sign_up' %}">
+                {% csrf_token %}
+
+                {{ form.as_p }}
+                <button type="submit" class="signup-button">Sign Up</button>
+            </form>
         </form>
         <a href="{% url 'sign_in' %}" class="signin-link">Already have an account? Sign in</a>
     </div>
