--- a/playground/templates/playground/index.html
+++ b/playground/templates/playground/index.html
@@ -3,6 +3,14 @@
 {% block title %}Welcome{% endblock  %}
 
 {% block content %}
+<select class="text-lg font-semibold hover:text-gray-500">
+    <option value="">Sort</option>
+    <option value="price-asc">Price: Low to High</option>
+    <option value="price-desc">Price: High to Low</option>
+    <option value="newest">Newest</option>
+    <option value="oldest">Oldest</option>
+</select>
+
     <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
         <h2 class="mb-12 text-2xl text-center">Newest items</h2>
         <div class="grid grid-cols-3 gap3">
