--- a/playground/templates/playground/contact.html
+++ b/playground/templates/playground/contact.html
@@ -1,5 +1,5 @@
 
-{% extends "playground/base.html" %}
+{% extends "playground/user_logged.html" %}
 
 {% block title %}Contact{% endblock title %}
 {% block content %}
