--- a/playground/templates/playground/sign_up.html
+++ b/playground/templates/playground/sign_up.html
@@ -101,18 +101,22 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="name">Name</label>
+                {{ form.name }}
                 <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
+                {{ form.email }}
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
+                {{ form.password }}
                 <input type="password" id="password" name="password" required>
             </div>
             <div class="form-group">
                 <label for="confirm_password">Confirm Password</label>
+                {{ form.password }}
                 <input type="password" id="confirm_password" name="confirm_password" required>
             </div>
             <form method="post" action="{% url 'sign_up' %}">
