--- a/playground/templates/playground/user_logged.html
+++ b/playground/templates/playground/user_logged.html
@@ -3,7 +3,7 @@
 {% block title %}Welcome{% endblock  %}
 
 {% block bar %}
-    <a href="{% url 'logout' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign out</a>
+    <a href="{% url 'sign_out' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign out</a>
 {% endblock  %}
 
 
