--- a/playground/templates/playground/index.html
+++ b/playground/templates/playground/index.html
@@ -3,8 +3,15 @@
 {% block title %}Welcome{% endblock  %}
 
 {% block bar %}
-    <a href="{% url 'sign_up' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
-    <a href="{% url 'sign_in' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-teal-700">Sign in</a>
+
+    {% if authenticated %}
+        {% comment %} <p>Yes, you are authenticated.</p> {% endcomment %}
+        <a href="{% url 'sign_out' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign out</a>
+    {% else %}
+        <a href="{% url 'sign_up' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
+        <a href="{% url 'sign_in' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-teal-700">Sign in</a>
+    {% endif %}
+        
 {% endblock  %}
 
 
