--- a/playground/templates/playground/sign_in.html
+++ b/playground/templates/playground/sign_in.html
@@ -1,3 +1,4 @@
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -102,24 +103,30 @@
     </style>
 </head>
 <body>
-
     <div class="signin-container">
         <h2>Sign In</h2>
         <form action="{% url 'sign_in' %}" method="post">
             {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next }}">
+            
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
             </div>
+            
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
+            
             <button type="submit" class="signin-button">Sign In</button>
+            
             {% block invalid_params %}{% endblock %}
         </form>
+        
         <a href="{% url 'sign_up' %}" class="signup-link">Don't have an account? Sign up</a>
+        <a href="{% provider_login_url 'google' %}" class="signup-link">Or sign in using Google</a>
     </div>
-
 </body>
+
 </html>
