--- a/playground/templates/playground/sign_up.html
+++ b/playground/templates/playground/sign_up.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load socialaccount %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -100,9 +101,9 @@
         <form action="{% url 'sign_up' %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="name">Name</label>
+                <label for="username">Name</label>
                 {{ form.name }}
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
@@ -127,6 +128,8 @@
             </form>
         </form>
         <a href="{% url 'sign_in' %}" class="signin-link">Already have an account? Sign in</a>
+        <a href="{% provider_login_url 'google' %}">Sign up with Google</a>
+
     </div>
 
 </body>
