--- a/playground/templates/playground/welcome.html
+++ b/playground/templates/playground/welcome.html
@@ -12,10 +12,10 @@
         <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
             <a href="/" class="text-xl font-semibold">Puddle</a>
             <div class="space-x-6">
-                <a href="#" class="text-lg font-semibold hover:text-gray-500">New item</a>
+                <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500">New item</a>
                 <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
                 <a href="{% url 'sign_up' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
-                <a href="{% url 'sign_in' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-teal-700">Sign in</a>
+                <a href="{% url 'login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-teal-700">Sign in</a>
             </div>
         </nav>
         <div class="px-6 py-6">
