--- a/item/templates/item/form.html
+++ b/item/templates/item/form.html
@@ -7,7 +7,7 @@
 
 {% block bar %}
 
-    {% if user.is_authenticated: %}
+    {% if user.is_authenticated %}
         {% comment %} <p>Yes, you are authenticated.</p> {% endcomment %}
         <a href="{% url 'sign_out' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign out</a>
     {% else %}
@@ -27,7 +27,7 @@
         {{ form.as_p }}
     </div>
     
-    {% if authenticated %}
+    {% if user.is_authenticated %}
         <button type="submit" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">
             Submit
         </button>
