--- a/playground/templates/playground/sign_in.html
+++ b/playground/templates/playground/sign_in.html
@@ -126,6 +126,7 @@
         
         <a href="{% url 'sign_up' %}" class="signup-link">Don't have an account? Sign up</a>
         <a href="{% provider_login_url 'google' %}" class="signup-link">Or sign in using Google</a>
+        <a href="/auth/login/" class="signup-link">Log In with 42</a>
     </div>
 </body>
 
