--- a/playground/templates/playground/profile.html
+++ b/playground/templates/playground/profile.html
@@ -3,7 +3,7 @@
 {% block title %}Profile{% endblock %}
 
 {% block bar %}
-    {% if user.is_authenticated %}
+    {% if user.is_authenticated %} 
         <a href="{% url 'profile' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Profile</a>
         <a href="{% url 'sign_out' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign out</a>
     {% else %}
@@ -17,10 +17,11 @@
     <div class="px-6 py-4">
         <div class="flex items-center">
             {% if profile.profile_picture %}
-            <img src="{{ user.profile_picture.url }}" alt="Profile Picture" />
-        {% else %}
-            <p>No profile picture available.</p>
-        {% endif %}
+                <img src="{{ profile.profile_picture.url }}" alt="Profile Picture" class="rounded-full w-60 h-60 object-cover" />
+            {% else %}
+                <img src="/path/to/default/profile_picture.png" alt="Profile Picture" class="rounded-full w-60 h-60 object-cover" />
+            {% endif %}
+        </div>        
             <div class="ml-6">
                 <h2 class="text-2xl font-bold text-gray-800">{{ user.username }}</h2>
                 <p class="text-gray-500">{{ user.email }}</p>
@@ -32,15 +33,16 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 px-6 py-4">
             <div>
                 <h3 class="text-lg font-semibold text-gray-700 mb-2">Personal Information</h3>
-                <p class="text-gray-600"><strong>First Name:</strong> {{ user.first_name }}</p>
-                <p class="text-gray-600"><strong>Last name:</strong> {{ user.last_name }}</p>
+                <p class="text-gray-600"><strong>First Name:</strong> {{ profile.first_name }}</p>
+                <p class="text-gray-600"><strong>Last name:</strong> {{ profile.last_name }}</p>
+                {% comment %} <p class="text-gray-600"><strong>Last name:</strong> {{ user.email}}</p> {% endcomment %}
             </div>
             <div>
                 <h3 class="text-lg font-semibold text-gray-700 mb-2">Account Details</h3>
                 <p class="text-gray-600"><strong>Items Listed:</strong> 12</p>
                 <p class="text-gray-600"><strong>Items Sold:</strong> 5</p>
-                <p class="text-gray-600"><strong>Favorite Categories:</strong> Electronics, Books</p>
-                <p class="text-gray-600"><strong>Membership Level:</strong> Premium</p>
+                {% comment %} <p class="text-gray-600"><strong>Favorite Categories:</strong> Electronics, Books</p>
+                <p class="text-gray-600"><strong>Membership Level:</strong> Premium</p> {% endcomment %}
             </div>
         </div>
     </div>
